--- a/30_sources/SRC_Zupfnoter/assets/index.css
+++ b/30_sources/SRC_Zupfnoter/assets/index.css
@@ -45,17 +45,22 @@ table {
   border-spacing: 0; }
 
 body {
-  font-family: Helvetica, Arial, sans-serif; }
+  font-family: Helvetica, Arial, sans-serif;
+  background-color: #2d3e50;
+  color: white; }
 
 .container {
   overflow: hidden;
-  position: absolute; }
+  position: absolute;
+  border-left: 1px solid #2d3e50;
+  background-color: #1bbc9b; }
   .container .title {
+    background-color: #2d3e50;
     width: 100%;
     height: 2em;
     line-height: 2em;
     text-align: right;
-    border-top: 1px solid black; }
+    border: 1px solid #1bbc9b; }
     .container .title .head {
       position: absolute;
       left: 1em;
@@ -106,10 +111,10 @@ body {
   top: 40%;
   bottom: 0px;
   left: 0px;
-  right: 51%; }
+  right: 50%; }
 
 #harpPreviewContainer {
   top: 40%;
   bottom: 0px;
-  left: 51%;
+  left: 50%;
   right: 0px; }
