--- a/30_sources/SRC_Zupfnoter/assets/index.css
+++ b/30_sources/SRC_Zupfnoter/assets/index.css
@@ -128,6 +128,9 @@ body {
   left: 0%;
   right: 0%; }
 
+#tunePreview {
+  overflow: auto; }
+
 #harpPreviewContainer {
   top: 50%;
   bottom: 0px;
