--- a/30_sources/SRC_Zupfnoter/public/index.css
+++ b/30_sources/SRC_Zupfnoter/public/index.css
@@ -95,27 +95,31 @@ body {
     border-left: 1px solid black;
     cursor: pointer; }
 
-#console ul {
-  width: 100%;
+#console {
+  overflow: auto;
   height: 100%;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  list-style-type: none;
-  color: #000000; }
-#console li {
-  border-bottom: 1px solid black;
-  line-height: 2em;
-  padding-left: 1em; }
-#console .error {
-  color: #ff0035; }
-#console .warning {
-  color: #e8d300; }
-#console .time {
-  padding-left: 1em;
-  width: 10%;
-  display: inline-block; }
-#console .msg {
-  display: inline-block; }
+  font-size: 80%; }
+  #console ul {
+    width: 100%;
+    height: 100%;
+    list-style-type: none;
+    color: #000000; }
+  #console li {
+    border-bottom: 1px solid black;
+    line-height: 2em;
+    padding-left: 1em; }
+  #console .error {
+    color: #ff0035; }
+  #console .info {
+    color: #000000; }
+  #console .warning {
+    color: #e8661d; }
+  #console .time {
+    padding-left: 1em;
+    width: 10%;
+    display: inline-block; }
+  #console .msg {
+    display: inline-block; }
 
 #leftColumn {
   position: absolute;
