--- a/30_sources/SRC_Zupfnoter/public/index.scss
+++ b/30_sources/SRC_Zupfnoter/public/index.scss
@@ -107,6 +107,12 @@ body {
   .warning {
     color: #e8661d;
   }
+
+  .debug {
+       color: #120ee8;
+     }
+
+
   .time {
     padding-left: 1em;
     width: 10%;
