refined layout on the screen

--- a/30_sources/SRC_Zupfnoter/public/index.css
+++ b/30_sources/SRC_Zupfnoter/public/index.css
@@ -160,6 +160,9 @@ body {
 #tunePreview {
   overflow: auto; }
 
+#harpPreview {
+  overflow: auto; }
+
 #harpPreviewContainer {
   top: 50%;
   bottom: 0px;
