now we have working sourcemaps

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -16,8 +16,7 @@
         <script src="vendor/jspdf.min.js" type="application/javascript"></script>
         <script type="application/javascript" src="vendor/filesaver.js"></script>
         <script type="application/javascript" src="vendor/jszip.min.js"></script>
-
-        <script type="application/javascript" src="assets/application.js"></script>
+        <%= javascript_include_tag 'application' %>
     </head>
     
     <body>
