--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -22,6 +22,7 @@
     <body>
         <div id="toolbar">
             <span class="head">Zupfnoter</span>
+            <input type="text" id="tbCommand" value="">
             <span class="button" id="tbPrintA4">print A4</i> </span>
             <span class="button" id="tbPrintA3">print A3</i> </span>
             <span class="button" id="tbRender"><i class="icon-brush-alt"></i></span>
