--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -16,7 +16,7 @@
         <script src="vendor/jspdf.min.js" type="application/javascript"></script>
         <script type="application/javascript" src="vendor/filesaver.js"></script>
         <script type="application/javascript" src="vendor/jszip.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/dropbox.js/0.10.2/dropbox.min.js"></script>
+        <script type="application/javascript" src="vendor/dropbox.min.js"></script>
         <%= javascript_include_tag 'application' %>
     </head>
     
