now can set debug level and auto refresh introduced a systemstatus

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -22,8 +22,9 @@
     
     <body>
         <div id="toolbar">
-            <span class="head">Zupfnoter</span>
-            <input type="text" id="tbCommand" value="">
+            <span class="head" id="lbZupfnoter">Zupfnoter</span>
+            <span class="text" id = "tbStatus"></span>
+            <input type="text" id="tbCommand" style = 'width = "30em"' value="">
             <span class="button" id="tbPrintA4">print A4</i> </span>
             <span class="button" id="tbPrintA3">print A3</i> </span>
             <span class="button" id="tbRender"><i class="icon-brush-alt">render</i></span>
