--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -33,29 +33,7 @@
 <div id="leftColumn">
   <div id="abcEditorContainer" class="container">
     <div class="body">
-      <div id="abcEditor" class="editor">X:1
-        T:Zupfnoter test
-        C:Bernhard Weichel
-        M:4/4
-        L:1/16
-        Q:1/4
-        K:G
-        %%score (T1 T2) (B1 B2)
-        V:T1 clef=treble-8 name="v1" snm="v1"
-        V:T2 clef=treble-8 name="v2" snm="v2"
-        %V:B1 middle=D, clef=bass name="Basso I" snm="B.I" transpose=-24
-        %V:B2 middle=D, clef=bass name="Basso II" snm="B.II" transpose=-24
-        % End of header, start of tune body:
-        % 1
-        [V:T1] [G,,16g16] | [G,,16g16] |[g G,, G, G] C D E F G A B c d e f g a b c'|
-        [V:T2] z16 | z16 | D F F F =F F F D D D D D D D D D |
-        [V:T1] EE F2 (G3G1) (A4A4) |(B6B2) c8 |
-        [V:T2] D D D D D D D D D D D D D D D D | D ^D D D D D D D =D D D D _D D D D |
-        [V:T1] d12 d4 | e16 |
-        [V:T2] D D D D D D D D D D D D D D D D | D D D D D D D D D D D D D D D D |
-        %[V:B1] z4 | C,D,E,F, | z4 |
-        %[V:B2] C,,D,,E,,F,, | G,,A,,B,,C | z4 |
-      </div>
+      <div id="abcEditor" class="editor"></div>
     </div>
   </div>
   <div id="consoleLog" class="container">
@@ -76,7 +54,6 @@
       <span class="button"><i class="icon-down-open-mini"></i></span>
     </div>
     <div class="body" id="tunePreview">
-
     </div>
   </div>
   <div id="harpPreviewContainer" class="container">
