initially prototyped Desktop application using node-webkit

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -23,6 +23,8 @@
 
 <body>
 <div id="toolbar">
+  <input style="display:none;" id="fileDialog" type="file"  accept=".abc"></input>
+  <input style="display:none;" id="folderDialog" type="file" nwdirectory />
   <span class="head" id="lbZupfnoter">Zupfnoter</span>
   <span class="text" id="tbStatus"></span>
   <span class="button" id="tbPrintA4">print A4</i> </span>
