refactored the handling of markers and annotations
marker is now curly underline
marker is not only one character if a range is available

--- a/30_sources/SRC_Zupfnoter/public/index.css
+++ b/30_sources/SRC_Zupfnoter/public/index.css
@@ -50,7 +50,7 @@ body {
   color: white; }
 
 .marked {
-  background-color: rgba(255, 0, 0, 0.5);
+  background: url(icons/underline.gif) bottom repeat-x;
   text-underline-mode: true;
   position: absolute; }
 
