--- a/30_sources/SRC_Zupfnoter/public/index.scss
+++ b/30_sources/SRC_Zupfnoter/public/index.scss
@@ -17,7 +17,8 @@ body {
 }
 
 .marked {
-  background-color: rgba(255, 0, 0, 0.5);
+  //background-color: rgba(255, 0, 0, 0.2);
+  background: url(icons/underline.gif) bottom repeat-x;
   text-underline-mode: true;
   position: absolute;
 }
