--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -13,6 +13,7 @@
   <script src="vendor/raphael.pan-zoom.min.js" type="application/javascript"></script>
   <script src="vendor/musical.min.js" type="application/javascript"></script>
   <script src="vendor/jqconsole.min.js" type="application/javascript"></script>
+  <script src="vendor/json_parse.js" type="application/javascript"></script>
 
   <script src="vendor/opal.min.js" type="application/javascript"></script>
   <script src="vendor/jspdf.min.js" type="application/javascript"></script>
