--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -15,7 +15,7 @@
   <script src="vendor/jqconsole.min.js" type="application/javascript"></script>
   <script src="vendor/json_parse.js" type="application/javascript"></script>
 
-  <script src="vendor/opal.min.js" type="application/javascript"></script>
+  <!-- <script src="vendor/opal.min.js" type="application/javascript"></script>-->
   <script src="vendor/jspdf.min.js" type="application/javascript"></script>
   <script src="vendor/filesaver.js" type="application/javascript"></script>
   <script src="vendor/jszip.min.js" type="application/javascript"></script>
