--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -20,6 +20,7 @@
   <script src="vendor/filesaver.js" type="application/javascript"></script>
   <script src="vendor/jszip.min.js" type="application/javascript"></script>
   <script src="vendor/dropbox.min.js" type="application/javascript"></script>
+    <script src="vendor/abc2svg.0.js" type="application/javascript"></script>
   <%= javascript_include_tag 'application' %>
 </head>
 
