--- a/30_sources/SRC_Zupfnoter/public/index.css
+++ b/30_sources/SRC_Zupfnoter/public/index.css
@@ -217,3 +217,10 @@ body {
   bottom: 0px;
   right: 50%;
   z-index: 999; }
+
+rect.abcref {
+  fill: red;
+  fill-opacity: 0.01; }
+
+rect.abcref:hover {
+  fill-opacity: 0.5; }
