intermediate version for selection in tune preview

--- a/30_sources/SRC_Zupfnoter/public/index.css
+++ b/30_sources/SRC_Zupfnoter/public/index.css
@@ -219,8 +219,12 @@ body {
   z-index: 999; }
 
 rect.abcref {
-  fill: red;
+  fill: grey;
   fill-opacity: 0.01; }
 
 rect.abcref:hover {
   fill-opacity: 0.5; }
+
+rect.highlight {
+  fill: red;
+  fill-opacity: 0.2; }
