--- a/30_sources/SRC_Zupfnoter/public/index.scss
+++ b/30_sources/SRC_Zupfnoter/public/index.scss
@@ -249,5 +249,7 @@ body {
   z-index: 999;
 }
 
-rect.abcref {fill:red;fill-opacity:0.01}
+rect.abcref {fill:grey;fill-opacity:0.01}
 rect.abcref:hover {fill-opacity:0.5}
+
+rect.highlight {fill: red;fill-opacity:0.2}
