now we have the first breakthrough to generate the harp note model

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -22,6 +22,8 @@
     <script src="vendor/dropbox.min.js" type="application/javascript"></script>
 
     <script src="vendor/abc2svg-1.js" type="application/javascript"></script>
+    <script src="vendor/abc2svg_play-1.js" type="application/javascript"></script>
+    <script src="vendor/abc2svg_midi-1.js" type="application/javascript"></script>
     <%= javascript_include_tag 'application' %>
 </head>
 
