now support dragging music xml or abc files to the left pane in order to import the same. Tried to stabilize behavior in case of corrupt abc files.
Note that xml2abc is still buggy. I messed it up during integration. Waiting for Willem to fix it. Thanks, Willem.

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -24,6 +24,8 @@
     <script src="vendor/abc2svg-1.js" type="application/javascript"></script>
     <script src="vendor/abc2svg_play-1.js" type="application/javascript"></script>
     <script src="vendor/abc2svg_midi-1.js" type="application/javascript"></script>
+    <script src="vendor/xml2abc-bw.js" type="application/javascript"></script>
+
     <%= javascript_include_tag 'application' %>
 </head>
 
@@ -47,12 +49,14 @@
     <div id="consoleLog" class="container">
         <div class="title rsh">
             <span class="head">Console</span>
+
             <span class="button"><i class="icon-down-open-mini"></i></span>
         </div>
         <div class="body">
             <div id="commandconsole"></div>
         </div>
     </div>
+
 </div>
 
 <div id="rightColumn">
