--- a/30_sources/SRC_Zupfnoter/public/index.css
+++ b/30_sources/SRC_Zupfnoter/public/index.css
@@ -13,7 +13,7 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+time, mark, audio, video, tspan {
   margin: 0;
   padding: 0;
   border: 0;
@@ -44,10 +44,14 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+.w2ui-tb-caption {
+  vertical-align: middle; }
+
 body {
   font-family: Helvetica, Arial, sans-serif;
   background-color: #0A425C;
-  color: white; }
+  color: green;
+  vertical-align: center; }
 
 .marked {
   background: url(icons/underline.gif) bottom repeat-x;
