--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -42,19 +42,84 @@
 </head>
 
 <body style="height: 100%;">
-
 <div id="layout" style="height: 100%"></div>
 <script type="text/javascript">
   function init_w2ui() {
 
+    perspectives = {
+      'tb_perspective:Alle': function () {
+        w2ui['layout'].show('left', window.instant);
+        w2ui['layout'].show('bottom', window.instant);
+        w2ui['layout'].show('main', window.instant);
+        w2ui['layout'].show('preview', window.instant);
+        w2ui['layout'].sizeTo('preview',"50%");
+      },
+      'tb_perspective:NotenEingabe': function () {
+        w2ui['layout'].show('left', window.instant);
+        w2ui['layout'].hide('bottom', window.instant);
+        w2ui['layout'].show('main', window.instant);
+        w2ui['layout'].hide('preview', window.instant);
+        w2ui['layout'].sizeTo('preview',"50%");
+      },
+      'tb_perspective:HarfenEingabe': function () {
+        w2ui['layout'].show('left', window.instant);
+        w2ui['layout'].hide('bottom', window.instant);
+        w2ui['layout'].hide('main', window.instant);
+        w2ui['layout'].show('preview', window.instant);
+        w2ui['layout'].sizeTo('preview',"100%");
+      },
+      'tb_perspective:Noten': function () {
+        w2ui['layout'].hide('left', window.instant);
+        w2ui['layout'].hide('bottom', window.instant);
+        w2ui['layout'].show('main', window.instant);
+        w2ui['layout'].hide('preview', window.instant);
+      },
+      'tb_perspective:Harfe': function () {
+        w2ui['layout'].hide('left', window.instant);
+        w2ui['layout'].hide('bottom', window.instant);
+        w2ui['layout'].hide('main', window.instant);
+        w2ui['layout'].show('preview', window.instant);
+        w2ui['layout'].sizeTo('preview',"100%");
+      },
+      'tb_view:0' : function(){uicontroller.$handle_command("view 0")},
+      'tb_view:1' : function(){uicontroller.$handle_command("view 1")},
+      'tb_view:2' : function(){uicontroller.$handle_command("view 2")},
+      'tb_view:3' : function(){uicontroller.$handle_command("view 3")},
+
+      'tb_scale:groß' : function(){$("#harpPreview svg").attr('height', 1400)},
+      'tb_scale:mittel' : function(){$("#harpPreview svg").attr('height', 700)},
+      'tb_scale:klein' : function(){$("#harpPreview svg").attr('height', 300)},
+
+      'tb_toggle_console': function(){w2ui['layout'].toggle('bottom', window.instant)},
+      'tb_save': function(){uicontroller.$handle_command("dsave")}
+    }
+
+    $('#tb_harppreviewscale').change(function(event){debugger})
+    // $("#harpPreview svg").attr('height', 300)
+
     var toolbar = {
       id: 'toolbar',
+      name: 'toolbar',
       items: [
         {type: 'html', html: '<p id="lbZupfnoter">Zupfnoter</p>'},
         {type: 'spacer'},
+        {type: 'html', html: '<div id="tbStatus"><div>'},
+        {type: 'button', id: 'tb_save', caption: 'speichern', icon: 'icon-folder', hint: 'Save in dropbox'},
+        {type: 'button', id: 'tb_toggle_console', caption: 'Console', icon: 'w2ui-icon-check', hint: 'Toggelt console'},
+
+        {type: 'spacer'},
+        {
+          type: 'menu', id: 'tb_scale', caption: 'Skalierung', img: '', items: [
+          {text: 'groß'},
+          {text: 'mittel'},
+          {text: 'klein'}
+        ]
+        },
         {
           type: 'menu', id: 'tb_perspective', caption: 'Perspektive', img: '', items: [
-          {text: 'Eingabe', icon: 'icon-page'},
+          {text: 'Alle', icon: 'icon-page'},
+          {text: 'NotenEingabe', icon: 'icon-page'},
+          {text: 'HarfenEingabe', icon: 'icon-page'},
           {text: 'Noten', icon: 'icon-page'},
           {text: 'Harfe', value: 'Item Three', icon: 'icon-page'}
         ]
@@ -62,107 +127,76 @@
         {type: 'break', id: 'break0'},
         {
           type: 'menu', id: 'tb_view', caption: 'Auszug', img: '', items: [
+          {text: '0', icon: 'icon-page'},
           {text: '1', icon: 'icon-page'},
           {text: '2', icon: 'icon-page'},
-          {text: '3', value: 'Item Three', icon: 'icon-page'}
+          {text: '3', icon: 'icon-page'}
         ]
         },
         {type: 'break'},
-        {type: 'button', id: 'play', caption: 'Play', icon: 'fa-beaker', hint: 'spielt ab Auswahl'}
-      ]
-      //onClick: function (event) {
-      //this.owner.content('bottom', event);
-      //}
-    }
-    //var consoleLogHtml = '<div id="consoleLog" class="container"> <div class="title rsh"> <span class="head">Console</span> <span class="button"><i class="icon-down-open-mini"></i></span> </div> <div class="body"> <div id="commandconsole"></div> </div> </div>';
-    var consoleLogHtml = '<div id="commandconsole"></div>';
+        {type: 'button', id: 'tbRender', caption: 'Render', icon: 'fa-beaker', hint: 'aktualisiert Ausgabe'},
+        {type: 'button', id: 'tbPlay', caption: 'Play', icon: 'fa-beaker', hint: 'spielt ab Auswahl'}
+      ],
 
-    var pstyle = 'background-color: #F5F6F7; border: 1px solid #dfdfdf; padding: 5px;';
+      onClick: function (event) {
+        if (perspectives[event.target]) {
+          perspectives[event.target]();
+        }
+        event.item.text = event.target;
+      }
+    }
+
+    $('#toolbar').w2toolbar(toolbar);
+
+    var pstyle = 'background-color: #F5F6F7; padding: 5px;';
     $('#layout').w2layout({
       name: 'layout',
       panels: [
-        {type: 'top', id: 'foobar', size: 30, resizable: true, style: pstyle, content: '', toolbar: toolbar,},  // Toolbar
-        {type: 'left', size: '50%', hidden: false, resizable: true, style: pstyle, content: '<div id="abcEditor" style="height:100%" class="editor"></div>'},                   // file liste
-        {type: 'main', style: 'background-color: white;', style: pstyle, overflow: 'hidden', content: '<div id="tunePreview"  style="height:100%; width: 100%;" ></div>'},                   // main
-        {type: 'preview', size: '50%', resizable: true, hidden: false, style: pstyle, content: '<div id="harpPreview" style="height:100%"></div>'},
-        //{type: 'right', size: 200, resizable: true, style: pstyle, content: 'right'},
-        {type: 'bottom', size: '10%', resizable: true, hidden: false, content: consoleLogHtml}
-      ],
-
-
-    });
-    var pstyle = 'background-color: #F0F0C1; border: 1px solid #dfdfdf; padding: 5px;';
-    $().w2layout({
-      name: 'layout2',
-      panels: [
-        // {type: 'top', size: 40, resizable: true, style: pstyle, content: 'top'},
+        {type: 'top', id: 'foobar', size: 50, resizable: false, content: '', toolbar: toolbar,},  // Toolbar
         {
-          type: 'left', size: '50%', resizable: true, style: pstyle,
-          content: '<div id="abcEditor" class="editor"></div>'
+          type: 'left',
+          size: '50%',
+          hidden: false,
+          resizable: true,
+          style: pstyle,
+          content: '<div id="abcEditor" style="height:100%;" ></div>'
         },
-        {type: 'main', style: pstyle, content: ' <div class="body" id="tunePreview">'},
-        {type: 'preview', size: '50%', resizable: true, hidden: false, style: pstyle, content: '<div class="body" id="harpPreviewx">'},
-        //{type: 'right', size: 80, resizable: true, style: pstyle, content: 'right'},
-        //{type: 'bottom', size: 40, resizable: true, hidden: true, style: pstyle, content: 'bottom'}
+        {
+          type: 'main',
+          style: pstyle,
+          overflow: 'hidden',
+          content: '<div id="tunePreview"  style="height:100%;" ></div>'
+        },
+        {
+          type: 'preview',
+          size: '50%',
+          resizable: true,
+          hidden: false,
+          style: pstyle,
+          content: '<div id="harpPreview" style="height:100%"></div>'
+        },
+        {
+          type: 'right',
+          size: 200,
+          resizable: true,
+          hidden: true,
+          style: pstyle,
+          content: '<div id="configEditor"></div>'
+        },
+        {
+          type: 'bottom',
+          size: '10%',
+          resizable: true,
+          hidden: false,
+          style: pstyle,
+          content: '<div id="commandconsole"></div>'
+        }
       ]
+
     });
-
-
     w2ui['layout'].refresh();
   }
 </script>
-<!--
-<div id="toolbar">
-    <input style="display:none;" id="fileDialog" type="file" accept=".abc"></input>
-    <input style="display:none;" id="folderDialog" type="file" nwdirectory/>
-    <span class="head" id="lbZupfnoter">Zupfnoter</span>
-    <span class="text" id="tbStatus"></span>
-    <span class="button" id="tbPrintA4">print A4</i> </span>
-    <span class="button" id="tbPrintA3">print A3</i> </span>
-    <span class="button" id="tbRender"><i class="icon-brush-alt">render</i></span>
-    <span class="button" id="tbPlay"><i class="icon-play">play</i></span>
-</div>
-<div id="leftColumn">
-    <div id="abcEditorContainer" class="container">
-        <div class="body">
-            <div id="abcEditor" class="editor"></div>
-        </div>
-    </div>
-    <div id="consoleLog" class="container">
-        <div class="title rsh">
-            <span class="head">Console</span>
-
-            <span class="button"><i class="icon-down-open-mini"></i></span>
-        </div>
-        <div class="body">
-            <div id="commandconsole"></div>
-        </div>
-    </div>
-
-</div>
-
-<div id="rightColumn">
-    <div id="tunePreviewContainer" class="container">
-        <div class="title">
-            <span class="head">Notes</span>
-            <span class="button"><i class="icon-down-open-mini"></i></span>
-        </div>
-        <div class="body" id="tunePreview">
-        </div>
-    </div>
-    <div id="harpPreviewContainer" class="container">
-        <div class="title rsh">
-            <span class="head">Harp</span>
-            <span class="button"><i class="icon-down-open-mini"></i></span>
-        </div>
-        <div class="body" id="harpPreview">
-
-        </div>
-    </div>
-</div>
-
-<div id="dragbar">&nbsp;</div>
--->
 
 
 </body>
